--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,9 @@
   "license": "ISC",
   "type": "module",
   "devDependencies": {
+    "nodemon": "^3.0.2"
+  },
+  "dependencies": {
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -20,7 +23,6 @@
     "express-rate-limit": "^7.1.5",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.0.2",
     "pg": "^8.11.3",
     "sequelize": "^6.35.2",
     "typescript": "^5.3.3"
