--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,8 @@
   "type": "module",
   "devDependencies": {
     "nodemon": "^3.0.2",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
@@ -25,7 +26,6 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.11.3",
-    "sequelize": "^6.35.2",
-    "typescript": "^5.3.3"
+    "sequelize": "^6.35.2"
   }
 }
